@@ -33,17 +33,21 @@ FONT 8, "MS Sans Serif"
 BEGIN
     PUSHBUTTON      "Record...",IDC_REC,474,320,41,12
     PUSHBUTTON      "Stop",IDC_STOP,517,320,30,12
-    CONTROL         "",IDC_VIEWRECT,"Static",SS_BLACKFRAME,4,4,543,314
     LTEXT           "Max FPS:",IDC_MAXFPS_LBL,4,322,32,8
     EDITTEXT        IDC_MAXFPS,37,320,17,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Size:",IDC_DIMLBL_1,61,322,16,8
+    EDITTEXT        IDC_XSZ,80,320,21,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "x",IDC_DIMLBL,103,322,8,8
+    EDITTEXT        IDC_YSZ,110,320,21,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Status (i.e. 640x480 x fps 3:21 etc)",IDC_STATUS,"Static",
                     SS_LEFTNOWORDWRAP | WS_GROUP,59,322,410,8
+    CONTROL         "",IDC_VIEWRECT,"Static",SS_BLACKFRAME,4,4,543,314
 END
 
 IDD_SAVEOPTS DIALOGEX 0, 0, 317, 56
 STYLE DS_CONTROL | WS_CHILD | WS_CLIPSIBLINGS
 EXSTYLE WS_EX_CONTROLPARENT
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     GROUPBOX        "Display in animation",IDC_STATIC,0,4,99,51
     CONTROL         "title frame:",IDC_TITLEUSE,"Button",BS_AUTOCHECKBOX | 
